Add script type

--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -55,6 +55,6 @@
     <audio data-key="75" src="./assets/sounds/tom.wav"></audio>
     <audio data-key="76" src="./assets/sounds/tink.wav"></audio>
 
-    <script src="./assets/index.js"></script>
+    <script type="text/javascript" src="./assets/index.js"></script>
   </body>
 </html>
