Add day 4 challenge

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           Day 3 - Playing with CSS Variables and JS
         </a>
       </li>
+
+      <li>
+        <a href="./Day 4/index.html">Day 4 - Array Cardio Day 1</a>
+      </li>
     </ul>
 
     <style></style>
