Add day 5 challenge

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
     <ul>
       <li>
-        <a href="./Day 1/index.html">Day 1 - JavaScript Drum Kit</a>
+        <a href="./01/index.html">Day 1 - JavaScript Drum Kit</a>
       </li>
 
       <li>
-        <a href="./Day 2/index.html">Day 2 - CSS + JS Clock</a>
+        <a href="./02/index.html">Day 2 - CSS + JS Clock</a>
       </li>
 
       <li>
-        <a href="./Day 3/index.html">
+        <a href="./03/index.html">
           Day 3 - Playing with CSS Variables and JS
         </a>
       </li>
 
       <li>
-        <a href="./Day 4/index.html">Day 4 - Array Cardio Day 1</a>
+        <a href="./04/index.html">Day 4 - Array Cardio Day 1</a>
       </li>
     </ul>
 
