--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <li>
         <a href="./04/index.html">Day 4 - Array Cardio Day 1</a>
       </li>
+
+      <li>
+        <a href="./05/index.html">Day 5 - Flex Panels Image Gallery</a>
+      </li>
     </ul>
 
     <style></style>
