Add day 6 challenge

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <li>
         <a href="./05/index.html">Day 5 - Flex Panels Image Gallery</a>
       </li>
+
+      <li>
+        <a href="./06/index.html">Day 6 - Ajax Type Ahead</a>
+      </li>
     </ul>
 
     <style></style>
